[package]
name = "binary2groundtruth"
version = "0.1.0"
authors = ["xitan <x1tan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
yaml-rust = "0.4.2"
capstone = "0.5.0"
goblin = "0.0.19"
log = "0.4.5"
simple_logger = "1.0.1"
fancy-regex = "0.1.0"
lazy_static = "1.1.0"
regex = "1.0.5"

serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.6"

clap = "2.32.0"
